# local-prompt-agent

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  test_agent.py
.cursor/: rules.mdc
config/: config.yaml
data/simple_rag/: index.json
docs/: BACKENDS_GUIDE.md  RAG_QUICKSTART.md  TOOLS_GUIDE.md  TROUBLESHOOTING.md
specs/: README.md  i18n-enhancement.adoc  multi-agent-enhancement.adoc  pdf-rag-design.adoc  specification.adoc  web-ui-design.adoc
src/local_prompt_agent/: __init__.py  agent.py
src/local_prompt_agent/api/: __init__.py  app.py
src/local_prompt_agent/backends/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/local_prompt_agent/cli/: __init__.py  main.py
src/local_prompt_agent/config/: __init__.py  settings.py
src/local_prompt_agent/document/: __init__.py  processor.py
src/local_prompt_agent/rag/: __init__.py  rag_system.py  simple_rag.py
src/local_prompt_agent/tools/: __init__.py  base.py  registry.py
src/local_prompt_agent/tools/builtin/: __init__.py  calculator.py  file_ops.py
src/local_prompt_agent/web/: index.html
src/local_prompt_agent/web/static/css/: style.css
src/local_prompt_agent/web/static/js/: app.js
summary/: PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  REORGANIZATION_COMPLETE.md  UPDATES_SUMMARY.md
temp/: .gitkeep  HOWTO_track_changes.md  README.md  TEMPLATE_session.md
tests/: __init__.py  test_config.py
